AB#79 style(users): add text truncation to user cards to prevent overflow

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -21,6 +21,18 @@
   }
 }
 
+@media (max-width: 430px) {
+  :root {
+    font-size: 75%;
+  }
+}
+
+@media (max-width: 355px) {
+  :root {
+    font-size: 65%;
+  }
+}
+
 html {
   @include mat.theme((
     color: (
